--- a/notebooks/assignment1/exploration.ipynb
+++ b/notebooks/assignment1/exploration.ipynb
@@ -256,52 +256,52 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>395</th>\n",
-       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_1...</td>\n",
-       "      <td>brain_tumor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1234</th>\n",
-       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
-       "      <td>brain_glioma</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>437</th>\n",
-       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
-       "      <td>brain_glioma</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1167</th>\n",
-       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
-       "      <td>brain_glioma</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
+       "      <th>1043</th>\n",
        "      <td>data/raw/BrainCancer/brain_menin/brain_menin_1...</td>\n",
        "      <td>brain_menin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1087</th>\n",
+       "      <th>109</th>\n",
+       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_3...</td>\n",
+       "      <td>brain_tumor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
+       "      <td>brain_glioma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1312</th>\n",
+       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_1...</td>\n",
+       "      <td>brain_tumor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_1...</td>\n",
+       "      <td>brain_tumor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>909</th>\n",
        "      <td>data/raw/BrainCancer/brain_menin/brain_menin_0...</td>\n",
        "      <td>brain_menin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>645</th>\n",
-       "      <td>data/raw/BrainCancer/brain_menin/brain_menin_2...</td>\n",
-       "      <td>brain_menin</td>\n",
+       "      <th>344</th>\n",
+       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
+       "      <td>brain_glioma</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1321</th>\n",
-       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_1...</td>\n",
+       "      <th>953</th>\n",
+       "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
+       "      <td>brain_glioma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1483</th>\n",
+       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_3...</td>\n",
        "      <td>brain_tumor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>508</th>\n",
-       "      <td>data/raw/BrainCancer/brain_tumor/brain_tumor_1...</td>\n",
-       "      <td>brain_tumor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1060</th>\n",
+       "      <th>124</th>\n",
        "      <td>data/raw/BrainCancer/brain_glioma/brain_glioma...</td>\n",
        "      <td>brain_glioma</td>\n",
        "    </tr>\n",
@@ -311,16 +311,16 @@
       ],
       "text/plain": [
        "                                               filepath        labels\n",
-       "395   data/raw/BrainCancer/brain_tumor/brain_tumor_1...   brain_tumor\n",
-       "1234  data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
-       "437   data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
-       "1167  data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
-       "398   data/raw/BrainCancer/brain_menin/brain_menin_1...   brain_menin\n",
-       "1087  data/raw/BrainCancer/brain_menin/brain_menin_0...   brain_menin\n",
-       "645   data/raw/BrainCancer/brain_menin/brain_menin_2...   brain_menin\n",
-       "1321  data/raw/BrainCancer/brain_tumor/brain_tumor_1...   brain_tumor\n",
-       "508   data/raw/BrainCancer/brain_tumor/brain_tumor_1...   brain_tumor\n",
-       "1060  data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma"
+       "1043  data/raw/BrainCancer/brain_menin/brain_menin_1...   brain_menin\n",
+       "109   data/raw/BrainCancer/brain_tumor/brain_tumor_3...   brain_tumor\n",
+       "1298  data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
+       "1312  data/raw/BrainCancer/brain_tumor/brain_tumor_1...   brain_tumor\n",
+       "305   data/raw/BrainCancer/brain_tumor/brain_tumor_1...   brain_tumor\n",
+       "909   data/raw/BrainCancer/brain_menin/brain_menin_0...   brain_menin\n",
+       "344   data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
+       "953   data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma\n",
+       "1483  data/raw/BrainCancer/brain_tumor/brain_tumor_3...   brain_tumor\n",
+       "124   data/raw/BrainCancer/brain_glioma/brain_glioma...  brain_glioma"
       ]
      },
      "execution_count": 10,
@@ -575,7 +575,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1500it [00:49, 30.29it/s]\n"
+      "1500it [00:49, 30.19it/s]\n"
      ]
     }
    ],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from src.data import BrainCancerDataset\n",
-    "from src.models import load_model, SimpleMLP, DecisionTreeModel\n",
+    "from src.models import load_model, SimpleMLP, DecisionTreeModel, HMMModel\n",
     "from src.models.train_model import train_model\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
@@ -841,8 +841,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name=\"decision_tree\"\n",
-    "# [mlp, decision_tree, ]\n",
+    "model_name=\"bayesian_network\"\n",
+    "# [mlp, decision_tree, naive_bayes, bayesian_network, hmm]\n",
     "model = load_model(model_name, input_dim=X_train.shape[1], num_classes=3)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -850,19 +850,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training decision_tree model...\n",
-      "Decision Tree training complete.\n",
-      "Decision Tree Log Loss: 0.0000, Training Accuracy: 1.0000\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# ==========================\n",
     "# Initialize & Train Model\n",
@@ -879,13 +871,6 @@
     "print(f\"Training {model_name} model...\")\n",
     "train_model(model, train_loader, criterion, optimizer, device, epochs=100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
